--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,5 +4,5 @@
 	--color-black: #000000;
 
 	// Шрифты
-	--font-family-default: "Arial", system-ui, sans-serif;
+	--font-family-default: "SansSerif", system-ui, sans-serif;
 }
