--- a/src/scss/blocks/page-nav.scss
+++ b/src/scss/blocks/page-nav.scss
@@ -2,7 +2,7 @@
 
 .page-nav {
 
-  &__icons {
+  &__contacts-icons {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -10,16 +10,7 @@
     margin: 7px 0 20px 0;
   }
 
-  &__icons-set {
-    display: flex;
-
-    margin-right: 15px;
-  }
-
-  &__icon-link {
-    display: flex;
-    justify-content: flex-end;
-
+  &__contacts-item {
     margin-right: 20px;
 
     &:last-child {
@@ -27,26 +18,65 @@
     }
   }
 
-  &__service {
-    display: flex;
-    align-items: center;
+  &__contacts-item--phone {
 
-    & page-nav__icon-link {
-      margin-right: 0;
+    & .page-nav__contacts-icon {
+      margin-right: 20px;
+    }
+
+    &:hover .page-nav__contacts-phone {
+      color: red;
+    }
+
+    &:hover .page-nav__contacts-icon {
+      color: red;
     }
   }
 
-  &__tel-link {
+  &__contacts-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover .page-nav__contacts-icon{
+      transition-property: color;
+      transition-duration: 0.1s;
+      transition-timing-function: ease-in-out;
+      color: #FE334A;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0 2px #FE334A;
+    }
+  }
+
+  &__contacts-icon {
+    color: #0C143B;
+
+    transition-duration: 0.1s;
+  }
+
+  &__contacts-link--phone .page-nav__contacts-icon {
+    margin-right: 20px;
+  }
+
+  &__contacts-phone {
     font-family: var(--font-family-default);
+    font-weight: 400;
     font-size: 16px;
     line-height: 22px;
     color: #0C143B;
 
-    margin-right: 20px;
-  }
+    transition-duration: 0.1s;
 
-  &__search-link {
-    margin-right: 23px;
+    &:hover {
+      color: #FE334A;
+
+      transition-property: color;
+      transition-duration: 0.1s;
+      transition-timing-function: ease-in-out;
+    }
   }
 
   &__login-button {
@@ -60,17 +90,55 @@
     border: none;
     border-radius: 20px;
     outline: none;
-    background: #FE334A;
+    background-color: #FE334A;
+    cursor: pointer;
 
     color: #FFFFFF;
 
+    transition-duration: 0.1s;
+
     padding: 0;
     margin: 0;
+
+    &:hover {
+      background-color: #0C143B;
+
+      transition-property: background-color;
+      transition-duration: 0.1s;
+      transition-timing-function: ease-in-out;
+    }
+
+    &:active {
+      background-color: #FFFFFF;
+
+      transition-duration: 0.1s;
+    }
+
+    &:active .page-nav__login-label {
+      color: #0C143B;
+
+      transition-duration: 0.1s;
+    }
+
+    &:active .page-nav__login-img {
+      color: #0C143B;
+      
+      transition-duration: 0.1s;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0 3px inset #0C143B;
+    }
   }
 
   &__login-image {
     padding: 0;
     margin: 0 11px 0 0;
+  }
+
+  &__login-img {
+    color: #FFFFFF;
   }
 
   &__login-label {
@@ -94,27 +162,43 @@
   }
 
   &__nav-link {
+    position: relative;
+
     font-family: var(--font-family-default);
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
     text-transform: uppercase;
-
     color: #0C143B;
-  }
 
-  &__nav-link--active {
-    position: relative;
+    overflow: hidden;
 
     &::before {
       position: absolute;
       content: "";
-      bottom: -5px;
+      bottom: -100%;
       left: 0;
 
       width: 100%;
       height: 2px;
       background-color: #FE334A;
+      opacity: 0;
+
+      transition-duration: 0.1s;
+    }
+
+    &:hover::before {
+      bottom: -5px;
+      opacity: 100%;
+
+      transition-property: bottom, opacity;
+      transition-duration: 0.1s;
+      transition-timing-function: ease-in-out;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0 3px #FE334A;
     }
   }
 }
