--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,4 +30,7 @@
 @use 'blocks/sectionset';
 @use 'blocks/forwho';
 @use 'blocks/specialist';
+@use 'blocks/documents';
+@use 'blocks/benefits';
+@use 'blocks/contacts';
 @use 'blocks/page-footer';
