--- a/src/scss/blocks/sectionset.scss
+++ b/src/scss/blocks/sectionset.scss
@@ -1,15 +1,25 @@
 @use "../mixins";
 
 .sectionset {
+  margin: 30px 0 0 0;
 
   &__container {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-wrap: wrap;
   }
-}
 
-.sectionset--one {
-  margin-top: 30px;
+  &__section-block {
+    margin-bottom: 45px;
+  }
+
+  &__section-block:nth-child(n+3) {
+    margin-bottom: 0;
+  }
+
+  &__section-block:nth-child(odd) {
+    margin-right: 85px;
+  }
 }
