--- a/src/scss/blocks/page-content.scss
+++ b/src/scss/blocks/page-content.scss
@@ -1,3 +1,9 @@
+@use "../mixins";
+
 .page-content {
   flex-grow: 1;
+
+  // @include mixins.respond-to(mobileOnly) {
+  //   display: none;
+  // }
 }
