--- a/src/scss/blocks/benefits.scss
+++ b/src/scss/blocks/benefits.scss
@@ -2,13 +2,35 @@
 
 .benefits {
 
+  display: flex;
+  flex-direction: column;
+
   &__title {
+    align-self: center;
+
+    text-align: center;
+
     margin: 0 0 30px 0;
+
+    @include mixins.respond-to(desktopD) {
+      align-self: flex-start;
+
+      text-align: left;
+    }
   }
   
   &__inner {
-    width: 588px;
-    height: 443px;
+    width: 590px;
+  
+    @include mixins.respond-to(mobileOnly) {
+      width: 320px;
+      height: auto;
+      overflow-x: auto;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      height: 445px;
+    }
   }
 
   &__table {
@@ -16,6 +38,10 @@
     width: 100%;
     border-collapse: collapse;
     border: 1px solid #0C143B;
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 1000px;
+    }
   }
 
   &__table-headrow {
@@ -27,10 +53,14 @@
 
     font-family: var(--font-family-default);
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 19px;
     text-align: center;
     color: #FFFFFF;
+
+    @include mixins.respond-to(desktopD) {
+      font-size: 14px;
+    }
   }
 
   &__table-data {
@@ -38,12 +68,17 @@
     border: 1px solid #0C143B;
 
     font-family: var(--font-family-default);
-    font-weight: 300;
-    font-size: 12px;
+    font-weight: 400;
+    font-size: 11px;
     line-height: 16px;
     text-align: center;
     color: #333333;
 
     padding: 5px;
+
+    @include mixins.respond-to(desktopD) {
+      font-weight: 300;
+      font-size: 12px;
+    }
   }
 }
