--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -10,6 +10,12 @@
 
   margin-top: 50px;
 
+  @include mixins.respond-to(mobileOnly) {
+    flex-direction: column;
+
+    height: auto;
+  }
+
   &__logo-block {
     margin: 0 0 10px 0;
   }
@@ -24,29 +30,42 @@
     width: 420px;
     height: 100%;
     background-color: #0C143B;
-    box-sizing: border-box;
 
     padding: 20px 0 20px 0;
 
     z-index: 10;
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 100%;
+    }
   }
 
   &__info-inner {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
 
     width: 100%;
     height: 280px;
     background-color: #FFFFFF;
 
-    padding: 10px 20px 20px 0;
-
+    padding: 10px 0 10px 10px;
+    
     z-index: 10;
+
+    @include mixins.respond-to(desktopD) {
+      align-items: flex-end;
+
+      padding: 10px 20px 20px 0;
+    }
   }
 
   &__main {
     margin-bottom: 30px;
+
+    @include mixins.respond-to(tabletOnly) {
+      margin-bottom: 10px;
+    }
   }
 
   &__main-title {
@@ -114,18 +133,23 @@
   }
 
   &__info-circle {
-    position: absolute;
-    top: 50%;
-    right: -30%;
+    display: none;
 
-    width: 272px;
-    height: 272px;
-    border-radius: 50%;
-    background-color: #FFFFFF;
-
-    transform: translateY(-50%);
-
-    z-index: 1;
+    @include mixins.respond-to(desktopD) {
+      position: absolute;
+      display: block;
+      top: 50%;
+      right: -30%;
+  
+      width: 272px;
+      height: 272px;
+      border-radius: 50%;
+      background-color: #FFFFFF;
+  
+      transform: translateY(-50%);
+  
+      z-index: 1;
+    }
   }
 
   &__map-block {
