--- a/src/scss/blocks/documents.scss
+++ b/src/scss/blocks/documents.scss
@@ -2,22 +2,60 @@
 
 .documents {
 
-  min-width: 539px;
+  display: flex;
+  flex-direction: column;
 
-  margin: 0 190px 0 0;
+  width: 540px;
+
+  margin: 0 0 50px 0;
+
+  @include mixins.respond-to(mobileOnly) {
+    width: 290px;
+  }
+
+  @include mixins.respond-to(desktopD) {
+    margin: 0 190px 0 0;
+  }
 
   &__title {
+    align-self: center;
+    text-align: center;
+
     margin: 0 0 30px 0;
+
+    @include mixins.respond-to(mobileOnly) {
+      margin: 0 0 15px 0;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      align-self: flex-start;
+      text-align: left;
+    }
+  }
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include mixins.respond-to(desktopD) {
+      align-items: flex-start;
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
 
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     &:last-child {
       margin-bottom: 0;
+    }
+
+    &:last-child .documents__photo {
+      width: 290px;
+      height: auto;
     }
   }
 
@@ -25,25 +63,41 @@
     position: relative;
 
     font-family: var(--font-family-default);
-    font-weight: 300;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 16px;
     line-height: 19px;
     color: #0C143B;
-    text-align: left;
+    text-align: center;
 
     padding-left: 16px;
     margin-bottom: 25px;
 
+    @include mixins.respond-to(mobileOnly) {
+      font-weight: 300;
+      font-size: 14px;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      text-align: left;
+    }
+  
+
     &::before {
       position: absolute;
       content: "";
-      top: 4px;
+      top: 6px;
       left: 0;
 
       width: 9px;
       height: 9px;
       border-radius: 50%;
       background-color: #FE334A;
+    }
+  }
+
+  &__br {
+    @include mixins.respond-to(mobileOnly) {
+      display: none;
     }
   }
 
