--- a/src/scss/blocks/navigation-menu.scss
+++ b/src/scss/blocks/navigation-menu.scss
@@ -2,15 +2,110 @@
 
 .navigation-menu {
 
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include mixins.respond-to(tabletOnly) {
+      align-items: flex-end;
+    }
   }
 
-  &__burger {
+  &__logo-block {
+    margin: 0;
+
+    z-index: 12;
+
+    @include mixins.respond-to(mobileOnly) {
+      margin: 10px 0 0 0;
+    }
+
+    & .logo-block__logo-title {
+      @include mixins.respond-to(mobileOnly) {
+        font-size: 16px;
+
+        margin: 0 0 0 10px;
+      }
+    }
+  }
+
+  &__logo-block--opened .logo-block__logo-title {
+    color: #FFFFFF;
+  }
+
+	&__burger {
 		display: none;
+
+    padding: 0;
+    margin: 0;
+
+    @include mixins.respond-to(mobileOnly) {
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+
+			width: 30px;
+			height: 18px;
+			background: transparent;
+
+			z-index: 12;
+    }
 	}
+
+  &__burger-line {
+    width: 22px;
+    height: 2px;
+    background-color: #0C143B;
+    border-radius: 2px;
+    transition-duration: 0.2s;
+
+    margin-bottom: 5px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__burger--opened .navigation-menu__burger-line {
+
+    &:first-child {
+      position: absolute;
+      top: 50%;
+
+      background-color: #FFFFFF;
+
+      transform: rotate(45deg);
+      transition-property: transform;
+      transition-duration: 0.2s;
+    }
+
+    &:nth-child(2) {
+      position: absolute;
+      top: 50%;
+
+      background-color: #FFFFFF;
+
+      opacity: 0;
+      transform: rotate(45deg) translateY(-45%);
+      transition-property: transform, opacity;
+      transition-duration: 0.2s;
+    }
+
+    &:last-child {
+      position: absolute;
+      top: 50%;
+
+      background-color: #FFFFFF;
+
+      transform: rotate(-45deg);
+      transition-property: transform;
+      transition-duration: 0.2s;
+    }
+  }
 }
