--- a/src/scss/blocks/page-nav.scss
+++ b/src/scss/blocks/page-nav.scss
@@ -2,12 +2,46 @@
 
 .page-nav {
 
+  @include mixins.respond-to(mobileOnly) {
+    position: absolute;
+    top: 0;
+    left: -100%;
+
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 100vh;
+    background-color: #0C143B;
+
+  
+    transition: 0.3s;
+
+    &--opened {
+      left: 0;
+    }
+  }
+
+  @include mixins.respond-to(tabletOnly) {
+    justify-content: space-between;
+  }
+
   &__contacts-icons {
     display: flex;
     align-items: center;
     justify-content: flex-end;
 
+    padding: 0;
     margin: 7px 0 20px 0;
+
+    @include mixins.respond-to(mobileOnly) {
+      flex-direction: column;
+      align-items: flex-start;
+
+      order: 2;
+
+      margin: 0 0 0 10px;
+    }
   }
 
   &__contacts-item {
@@ -16,6 +50,14 @@
     &:last-child {
       margin-right: 0;
     }
+
+    @include mixins.respond-to(mobileOnly) {
+      display: none;
+    }
+  }
+
+  &__contacts-item--button {
+    display: block;
   }
 
   &__contacts-item--phone {
@@ -92,6 +134,7 @@
     outline: none;
     background-color: #FE334A;
     cursor: pointer;
+    user-select: none;
 
     color: #FFFFFF;
 
@@ -102,6 +145,10 @@
 
     &:hover {
       background-color: #0C143B;
+
+      @include mixins.respond-to(mobileOnly) {
+        background-color: #FE334A;
+      }
 
       transition-property: background-color;
       transition-duration: 0.1s;
@@ -129,6 +176,10 @@
     &:focus {
       outline: none;
       box-shadow: 0 0 0 3px inset #0C143B;
+
+      @include mixins.respond-to(mobileOnly) {
+        box-shadow: none;
+      }
     }
   }
 
@@ -151,6 +202,21 @@
 
   &__nav-list {
     display: flex;
+
+    margin: 0;
+    padding: 0;
+
+    @include mixins.respond-to(mobileOnly) {
+      flex-direction: column;
+      order: 1;
+
+      padding: 0;
+      margin: 100px 0 10px 10px;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      margin-top: 20px;
+    }
   }
 
   &__nav-item {
@@ -159,18 +225,24 @@
     &:last-child {
       margin-right: 0;
     }
+
+    @include mixins.respond-to(mobileOnly) {
+      margin-bottom: 10px;
+    }
   }
 
   &__nav-link {
     position: relative;
 
+    display: block;
+    width: 100%;
+    
     font-family: var(--font-family-default);
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
     text-transform: uppercase;
     color: #0C143B;
-
     overflow: hidden;
 
     &::before {
@@ -199,6 +271,23 @@
     &:focus {
       outline: none;
       box-shadow: 0 0 0 3px #FE334A;
+
+      @include mixins.respond-to(mobileOnly) {
+        box-shadow: none;
+      }
     }
   }
+
+  &__hidden {
+    @include mixins.respond-to(tabletOnly) {
+      display: none;
+    }
+  }
+}
+
+.page-nav__nav-link {
+  @include mixins.respond-to(mobileOnly) {
+    font-size: 18px;
+    color: #FFFFFF;
+   }
 }
