--- a/src/scss/blocks/section-title.scss
+++ b/src/scss/blocks/section-title.scss
@@ -24,5 +24,11 @@
     width: 100%;
     height: 2px;
     background-color: #FE334A;
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 0;
+      height: 0;
+      background: none;
+    }
   }
 }
