--- a/src/scss/blocks/features.scss
+++ b/src/scss/blocks/features.scss
@@ -10,7 +10,7 @@
   
   &__container {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-evenly;
     flex-wrap: wrap;
 
@@ -25,16 +25,18 @@
     align-items: center;
     justify-content: space-between;
 
-    width: 373px;
-    height: 221px;
+    // width: 380px;
+    width: 32%;
+    min-height: 220px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 
-    margin-bottom: 30px;
+    padding: 0;
+    margin: 0 0 30px 0;
     
     @include mixins.respond-to(mobileOnly) {
-      width: 290px;
+      width: 100%;
 
       margin-bottom: 50px;
     }
@@ -81,8 +83,9 @@
     font-size: 16px;
     line-height: 22px;
     text-align: center;
-
     color: #0C143B;
+
+    margin: 0 0 15px 0;
   }
 
   &__learnmore-button {
@@ -90,7 +93,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 192px;
+    width: 190px;
     height: 40px;
     background-color: #0C143B;
     border-radius: 20px;
