--- a/src/scss/blocks/forwho.scss
+++ b/src/scss/blocks/forwho.scss
@@ -4,18 +4,19 @@
   display: flex;
   flex-direction: column;
 
-  width: 540px;
-  height: 300px;
+  width: 100%;
+  min-height: 300px;
 
   margin: 0 0 50px 0;
 
   @include mixins.respond-to(mobileOnly) {
-    width: 290px;
     height: auto;
   }
 
-  @include mixins.respond-to(desktopD) {
-    margin: 0 80px 0 0;
+  @include mixins.respond-to(desktopS) {
+    width: 49%;
+
+    margin: 0;
   }
 
   &__container {
@@ -31,7 +32,7 @@
 
     margin: 0 0 25px 0;
 
-    @include mixins.respond-to(desktopD) {
+    @include mixins.respond-to(desktopS) {
       align-self: flex-start;
 
       text-align: left;
@@ -45,7 +46,7 @@
     min-height: 230px;
     background-color: #0C143B;
 
-    padding: 15px 0 20px 0;
+    padding: 20px 0 20px 0;
   }
 
   &__item {
