--- a/src/scss/blocks/specialist.scss
+++ b/src/scss/blocks/specialist.scss
@@ -4,10 +4,14 @@
   display: flex;
   flex-direction: column;
 
-  width: 540px;
+  width: 49%;
 
   @include mixins.respond-to(mobileOnly) {
-    width: 290px;
+    width: 100%;
+  }
+
+  @include mixins.respond-to(tabletOnly) {
+    width: 100%;
   }
 
   &__title {
@@ -21,12 +25,12 @@
     color: #0C143B;
     text-align: center;
 
-    margin: 0 0 15px 0;
+    margin: 0 0 25px 0;
 
-    @include mixins.respond-to(desktopD) {
-      align-self: flex-start;
+    @include mixins.respond-to(desktopS) {
+      align-self: flex-end;
 
-      text-align: left;
+      text-align: right;
     }
   }
 
@@ -39,9 +43,8 @@
     flex-direction: column;
     align-items: center;
 
-    @include mixins.respond-to(desktopD) {
-      flex-direction: row;
-      align-items: flex-start;
+    @include mixins.respond-to(desktopS) {
+      align-items: flex-end;
     }
   }
 
@@ -50,8 +53,9 @@
     flex-direction: column;
     align-items: center;
 
-    @include mixins.respond-to(desktopD) {
-      align-items: flex-start;
+    @include mixins.respond-to(desktopS) {
+      align-items: flex-end;
+      text-align: right;
     }
   }
 
@@ -76,12 +80,6 @@
 
     padding: 0;
     margin: 0 0 10px 0;
-
-    @include mixins.respond-to(desktopD) {
-      font-size: 14px;
-      font-weight: 300;
-      text-align: left;
-    }
   }
 
   &__learnmore {
@@ -96,10 +94,8 @@
 
     transition-duration: 0.1s;
 
-    @include mixins.respond-to(desktopD) {
+    @include mixins.respond-to(desktopS) {
       align-self: flex-end;
-
-      font-size: 18px;
     }
 
     &:hover {
